<resources>
    <string name="app_name">Rewards</string>
    <string name="prefsFileKey">"MY_PREFS_KEY"</string>
    <string name="apiKey">"DATA1_KEY"</string>
    <string name="loginUsername">"DATA2_KEY"</string>
    <string name="loginPassword">"DATA3_KEY"</string>
    <string name="checked">"DATA4_KEY"</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="tap_here_to_create_a_profile">Tap here to create a profile</string>
    <string name="tap_to_clear_saved_api_key">Tap to clear saved API key</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="remember_my_credentials">Remember my credentials</string>
    <string name="profilePicture1">profilePicture1</string>
    <string name="titlelogo">titlelogo</string>
    <string name="profilePicture3">profilePicture3</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="profilepicture2">profilePicture2</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="department">Department:</string>
    <string name="textview5">TextView</string>
    <string name="position">Position:</string>
    <string name="textview6">TextView</string>
    <string name="points_to_award">Points to Award:</string>
    <string name="textview7">TextView</string>
    <string name="your_story">Your Story:</string>
    <string name="rewards_history">Rewards History</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="student_email_edu">Student Email (.edu)</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="profileimage1">profileImage1</string>
    <string name="usernameProfile">Username</string>
    <string name="passwordProfile">Password</string>
    <string name="first_name_profile">First Name</string>
    <string name="last_name_profile">Last Name</string>
    <string name="department_name">Department Name</string>
    <string name="position_title">Position Title</string>
    <string name="write_your_story_here">Write your story here</string>
    <string name="your_story_profile">Your Story:</string>
    <string name="passwordEdit">Password</string>
    <string name="first_name_edit">First Name</string>
    <string name="last_name_edit">Last Name</string>
    <string name="department_name_edit">Department Name</string>
    <string name="position_title_edit">Position Title</string>
    <string name="your_story_edit">Your Story:</string>
    <string name="write_your_story_here_edit">Write your story here</string>
    <string name="separator1">separator1</string>
    <string name="profilepicture4">profilePicture4</string>
    <string name="points_awarded_reward">Points Awarded:</string>
    <string name="departmentReward">Department:</string>
    <string name="positionReward">Position:</string>
    <string name="your_story_reward">Your Story:</string>
    <string name="reward_points_to_send">Reward points to send:</string>
    <string name="commentReward">Comment:</string>
    <string name="enter_points_to_send">Enter Points to Send</string>
    <string name="add_comnment_here">Add comnment here</string>
    <string name="profilepicture5">profilePicture5</string>
    <string name="profilephoto_createprofile">profilePhoto_createProfile</string>
    <string name="username_createProfile">Username</string>
    <string name="password_createProfile">Password</string>
    <string name="first_name_createProfile">First Name</string>
    <string name="last_name_createProfile">Last Name</string>
    <string name="department_name_createProfile">Department Name</string>
    <string name="position_title_createProfile">Position Title</string>
    <string name="your_story_createProfile">Your Story:</string>
    <string name="write_your_story_here_createProfile">Write your story here</string>
    <string name="password_editProfile">Password</string>
    <string name="first_name_editProfile">First Name</string>
    <string name="last_name_editProfile">Last Name</string>
    <string name="department_name_editProfile">Department Name</string>
    <string name="position_title_editProfile">Position Title</string>
    <string name="your_story_editProfile">Your Story:</string>
    <string name="write_your_story_here_editProfile">Write your story here</string>
    <string name="profilephoto_main">profilePhoto_main</string>
    <string name="separator2">separator2</string>

</resources>