<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3E1E1">

        <TextView
            android:id="@+id/fullNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/custom"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@color/custom"
            android:text="@string/textview2"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameBox" />

        <ImageView
            android:id="@+id/profileImage2"
            android:layout_width="139dp"
            android:layout_height="209dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profilepicture2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationBox"
            app:srcCompat="@drawable/default_photo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:background="@color/custom"
            android:text="@string/points_awarded"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernamePasswordBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/custom"
            android:text="@string/textview3"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/fullNameBox"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pointsAwardedBox"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/custom"
            android:text="@string/textview4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/custom"
            android:text="@string/department"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/pointsAwardedBox" />

        <TextView
            android:id="@+id/departmentBox2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/custom"
            android:text="@string/textview5"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/custom"
            android:text="@string/position"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/departmentBox2" />

        <TextView
            android:id="@+id/positionBox2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/custom"
            android:text="@string/textview6"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/custom"
            android:text="@string/points_to_award"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/positionBox2" />

        <TextView
            android:id="@+id/pointsToAwardBox2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/custom"
            android:text="@string/textview7"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/profileImage2"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:background="@color/custom"
            android:text="@string/your_story"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage2" />

        <TextView
            android:id="@+id/storyBox2"
            android:layout_width="376dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorButtonNormal"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/custom"
            android:text="@string/rewards_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyBox2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRewards"
            android:layout_width="376dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorButtonNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>