<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom">

        <ImageView
            android:id="@+id/profileImage3"
            android:layout_width="171dp"
            android:layout_height="204dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profilePicture3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_photo" />

        <EditText
            android:id="@+id/usernameBox3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Username"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="#8BACACAC"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/profileImage3"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordBox3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Password"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="#8BACACAC"
            android:ems="10"
            android:hint="@string/password_editProfile"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintStart_toEndOf="@+id/profileImage3"
            app:layout_constraintTop_toBottomOf="@+id/usernameBox3" />

        <EditText
            android:id="@+id/firstNameBox3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="First Name"
            android:background="?attr/colorButtonNormal"
            android:ems="10"
            android:hint="@string/first_name_editProfile"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/profileImage3"
            app:layout_constraintTop_toBottomOf="@+id/passwordBox3" />

        <EditText
            android:id="@+id/lastnameBox3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Last Name"
            android:background="?attr/colorButtonNormal"
            android:ems="10"
            android:hint="@string/last_name_editProfile"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/profileImage3"
            app:layout_constraintTop_toBottomOf="@+id/firstNameBox3" />

        <EditText
            android:id="@+id/departmentNameBox3"
            android:layout_width="389dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Department Name"
            android:background="?attr/colorButtonNormal"
            android:ems="10"
            android:hint="@string/department_name_editProfile"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastnameBox3" />

        <EditText
            android:id="@+id/positionTitleBox3"
            android:layout_width="389dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="Position Title"
            android:background="?attr/colorButtonNormal"
            android:ems="10"
            android:hint="@string/position_title_editProfile"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/departmentNameBox3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/custom"
            android:text="@string/your_story_editProfile"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionTitleBox3" />

        <EditText
            android:id="@+id/storyBox3"
            android:layout_width="389dp"
            android:layout_height="229dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Write your story here"
            android:background="?attr/colorButtonNormal"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/write_your_story_here_editProfile"
            android:inputType="textMultiLine|textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>